[gd_scene load_steps=4 format=3 uid="uid://ck41xm50r0mos"]

[ext_resource type="Script" uid="uid://chb00xx550mbo" path="res://Scripts/high_score.gd" id="1_1uu5h"]
[ext_resource type="Texture2D" uid="uid://b3tevue8u0uhb" path="res://Assets/The Dead.jpg" id="2_v2gce"]
[ext_resource type="StyleBox" uid="uid://hjxxatualruc" path="res://menu_box_panel_bg.tres" id="3_v2gce"]

[node name="HighScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1uu5h")

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 325.25)
scale = Vector2(1.87909, 1.81373)
texture = ExtResource("2_v2gce")
metadata/_edit_lock_ = true

[node name="Dimming" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_v2gce")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HighScoresLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "HIGH SCORES"

[node name="InputContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="MessageLabel" type="Label" parent="Panel/VBoxContainer/InputContainer"]
layout_mode = 2
text = "GAME OVER!"
horizontal_alignment = 1

[node name="YourScoreLabel" type="Label" parent="Panel/VBoxContainer/InputContainer"]
layout_mode = 2
text = "Score: "
horizontal_alignment = 1

[node name="Initials" type="LineEdit" parent="Panel/VBoxContainer/InputContainer"]
layout_mode = 2
placeholder_text = "Initials (3 Chars)"
alignment = 1

[node name="SubmitButton" type="Button" parent="Panel/VBoxContainer/InputContainer"]
layout_mode = 2
text = "Submit"

[node name="ScoresContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="ResetScores" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Reset Scores
"

[node name="Back" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Back"
